--- a/web/theme/app/templates/index.html
+++ b/web/theme/app/templates/index.html
@@ -16,7 +16,7 @@
     {% if error %}
     <p>{{ error }}</p>
     {% elif result %}
-    <p>The binary of {{ number }} is {{ result }}.</p>
+    <p>The binary is {{ result }}.</p>
     {% endif %}
     <p>Available themes:</p>
         <a href="?theme=themes/theme1.css">cool</a>
